--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   },
   "homepage": "https://github.com/Mission-Ready/2502-L4FT17-missionx-backend-t3#readme",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.0"
+    "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.0",
+    "uploadthing": "^7.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
